# auv_traj_follow_manager

./: CMakeLists.txt  README.md  package.xml
include/auv_traj_follow_manager/: AUVTrajFollowManagerROS.h
nodes/: AUVTrajFOllowManagerNode.cpp  SetMissionStatusClient.cpp
src/: AUVTrajFollowManagerROS.cpp
srv/: SetMissionStatus.srv
